fix: Support to collapse readme node in examples

--- a/src/agentscope/studio/static/css/workstation-drag-components.css
+++ b/src/agentscope/studio/static/css/workstation-drag-components.css
@@ -76,6 +76,10 @@
     display: none;
 }
 
+.hidden {
+    display: none;
+}
+
 .box input, .box select, .box textarea {
     display: flex;
     flex-direction: column;
